1998-04-25  Mikael Djurfeldt  <mdj@kenneth>

	* configure.in: Define USLEEP_RETURNS_VOID on some systems.
	(Thanks to Julian Satchell.)

1998-04-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Check for usleep;  Define DECLARE_BZERO and
	DECLARE_USLEEP on Solaris 2.5 since it supplies those functions
	without declaring them.

	* acconfig.h: Added DECLARE_BZERO, DECLARE_USLEEP

1998-04-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Define HAVE_DLOPEN also when HAVE_LIBDL is
	defined.

1998-04-18  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in (GUILE_LIBS): New variable.  Contains libraries
	which libguile needs to be linked with.  Substituted into
	libpath.h.

	* threads.m4 (threads_package): Don't add $LDFLAGS and $LIBS to
	$cy_cv_threads_libs.

1998-04-11  Mikael Djurfeldt  <mdj@kenneth>

	New libtool: 1.2
	* ltconfig, ltmain.sh, config.sub, config.guess: Updated.
	New automake: 1.3
	* Makefile.in, aclocal.m4, configure: Regenerated.
	* README: Mention new version numbers on libtool and automake.

1997-12-11  Tim Pierce  <twp@skepsis.com>

	* HACKING: Note that SSH is mandatory for CVS access.

Sun Dec  7 06:11:24 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* README: using Automake 1.2d
	* configure.in: AC_CHECK_FUNCS: add "system".

1997-12-01  Tim Pierce  <twp@skepsis.com>

	* acconfig.h: Add USCORE.

1997-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* configure.in: Added code to enable GUILE_ISELECT on systems
	which have the necessary functions (gettimeofday, select).

	* acconfig.h: Added GUILE_ISELECT.

1997-11-24  Tim Pierce  <twp@twp.tezcat.com>

	* acinclude.m4: Assume dlsym does not add underscore if
 	cross-compiling.
	* aclocal.m4, configure: Regenderated.

1997-11-21  Tim Pierce  <twp@twp.tezcat.com>

	* acinclude.m4 (GUILE_DLSYM_USCORE): New macro, thanks Dan Hagerty
	<hag@ai.mit.edu>.
	* configure.in: Use it.
	* configure: Regenerated.
	* acconfig.h (DLSYM_ADDS_USCORE): New #define.
	