@@ -53,11 +53,11 @@ AC_TYPE_SIGNAL
 AC_TYPE_MODE_T
 
 AC_CHECK_LIB(m, main)
-AC_CHECK_FUNC(gethostbyname)
+AC_CHECK_FUNCS(gethostbyname)
 if test $ac_cv_func_gethostbyname = no; then
     AC_CHECK_LIB(nsl, gethostbyname)
 fi
-AC_CHECK_FUNC(connect)
+AC_CHECK_FUNCS(connect)
 if test $ac_cv_func_connect = no; then
     AC_CHECK_LIB(socket, connect)
 fi
@@ -70,18 +70,18 @@ if test "$enable_dynamic_linking" = "yes"; then
 
 AC_CHECK_LIB(dl,dlopen)
 if test "$ac_cv_lib_dl_dlopen" = "yes"; then
-  AC_CHECK_FUNC(dlopen)
+  AC_CHECK_FUNCS(dlopen)
   AC_DEFINE(DYNAMIC_LINKING)
 else
 AC_CHECK_LIB(dld,dld_link)
 if test "$ac_cv_lib_dld_dld_link" = "yes"; then
   AC_DEFINE(DYNAMIC_LINKING)
 else
-AC_CHECK_FUNC(shl_load)
+AC_CHECK_FUNCS(shl_load)
 if test "$ac_cv_func_shl_load" = "yes"; then
   AC_DEFINE(DYNAMIC_LINKING)
 else
-AC_CHECK_FUNC(dlopen)
+AC_CHECK_FUNCS(dlopen)
 if test "$ac_cv_func_dlopen" = "yes"; then
   AC_DEFINE(DYNAMIC_LINKING)
 fi
